--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^3.4.1",
     "browserify": "^13.3.0",
     "jasmine": "^2.5.3",
     "karma": "^1.4.0",
